--- a/Qt/main.ui
+++ b/Qt/main.ui
@@ -82,7 +82,7 @@
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>60</y>
+      <y>54</y>
       <width>1211</width>
       <height>691</height>
      </rect>
@@ -300,6 +300,19 @@
        </property>
       </widget>
      </widget>
+     <widget class="QTableView" name="tv_detail_positions">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>431</y>
+        <width>721</width>
+        <height>231</height>
+       </rect>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_kunden">
      <attribute name="title">
@@ -324,7 +337,7 @@
      <widget class="QLineEdit" name="tb_vorname">
       <property name="geometry">
        <rect>
-        <x>740</x>
+        <x>750</x>
         <y>60</y>
         <width>201</width>
         <height>31</height>
@@ -339,7 +352,7 @@
      <widget class="QLabel" name="lbl_vorname">
       <property name="geometry">
        <rect>
-        <x>740</x>
+        <x>750</x>
         <y>40</y>
         <width>201</width>
         <height>16</height>
@@ -357,8 +370,8 @@
      <widget class="QLineEdit" name="tb_nachname">
       <property name="geometry">
        <rect>
-        <x>970</x>
-        <y>60</y>
+        <x>750</x>
+        <y>140</y>
         <width>201</width>
         <height>31</height>
        </rect>
@@ -372,8 +385,8 @@
      <widget class="QLabel" name="lbl_nachname">
       <property name="geometry">
        <rect>
-        <x>970</x>
-        <y>40</y>
+        <x>750</x>
+        <y>120</y>
         <width>201</width>
         <height>16</height>
        </rect>
@@ -390,9 +403,9 @@
      <widget class="QLabel" name="lbl_geschlecht">
       <property name="geometry">
        <rect>
-        <x>740</x>
+        <x>980</x>
         <y>120</y>
-        <width>201</width>
+        <width>101</width>
         <height>16</height>
        </rect>
       </property>
@@ -408,7 +421,7 @@
      <widget class="QComboBox" name="cb_geschlecht">
       <property name="geometry">
        <rect>
-        <x>740</x>
+        <x>980</x>
         <y>140</y>
         <width>71</width>
         <height>31</height>
@@ -631,6 +644,39 @@
        </property>
       </widget>
      </widget>
+     <widget class="QLineEdit" name="tb_kdnr">
+      <property name="geometry">
+       <rect>
+        <x>980</x>
+        <y>60</y>
+        <width>201</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lbl_kdnr">
+      <property name="geometry">
+       <rect>
+        <x>980</x>
+        <y>40</y>
+        <width>201</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Kundennummer</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_dienstleister">
      <property name="enabled">
@@ -692,7 +738,7 @@
       <property name="geometry">
        <rect>
         <x>740</x>
-        <y>80</y>
+        <y>130</y>
         <width>451</width>
         <height>171</height>
        </rect>
@@ -870,7 +916,7 @@
       <property name="geometry">
        <rect>
         <x>740</x>
-        <y>260</y>
+        <y>310</y>
         <width>451</width>
         <height>171</height>
        </rect>
@@ -1106,7 +1152,7 @@
       <property name="geometry">
        <rect>
         <x>740</x>
-        <y>440</y>
+        <y>490</y>
         <width>451</width>
         <height>121</height>
        </rect>
@@ -1214,6 +1260,39 @@
        </property>
       </widget>
      </widget>
+     <widget class="QLineEdit" name="tb_dienst_ceo">
+      <property name="geometry">
+       <rect>
+        <x>750</x>
+        <y>100</y>
+        <width>211</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lbl_dienst_ceo">
+      <property name="geometry">
+       <rect>
+        <x>750</x>
+        <y>80</y>
+        <width>211</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Geschäftsführer</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_positionen">
      <attribute name="title">
@@ -1238,8 +1317,8 @@
      <widget class="QLabel" name="lbl_bezeichnung">
       <property name="geometry">
        <rect>
-        <x>740</x>
-        <y>40</y>
+        <x>750</x>
+        <y>110</y>
         <width>201</width>
         <height>16</height>
        </rect>
@@ -1256,9 +1335,9 @@
      <widget class="QLineEdit" name="tb_bezeichnung">
       <property name="geometry">
        <rect>
-        <x>740</x>
-        <y>60</y>
-        <width>201</width>
+        <x>750</x>
+        <y>130</y>
+        <width>431</width>
         <height>31</height>
        </rect>
       </property>
@@ -1271,8 +1350,8 @@
      <widget class="QLabel" name="lbl_beschreibung">
       <property name="geometry">
        <rect>
-        <x>740</x>
-        <y>120</y>
+        <x>750</x>
+        <y>190</y>
         <width>201</width>
         <height>16</height>
        </rect>
@@ -1289,8 +1368,8 @@
      <widget class="QTextBrowser" name="tb_beschreibung">
       <property name="geometry">
        <rect>
-        <x>740</x>
-        <y>140</y>
+        <x>750</x>
+        <y>210</y>
         <width>431</width>
         <height>101</height>
        </rect>
@@ -1299,8 +1378,8 @@
      <widget class="QLabel" name="lbl_flaeche">
       <property name="geometry">
        <rect>
-        <x>740</x>
-        <y>260</y>
+        <x>750</x>
+        <y>330</y>
         <width>201</width>
         <height>16</height>
        </rect>
@@ -1317,8 +1396,8 @@
      <widget class="QDoubleSpinBox" name="dsb_flaeche">
       <property name="geometry">
        <rect>
-        <x>740</x>
-        <y>280</y>
+        <x>750</x>
+        <y>350</y>
         <width>201</width>
         <height>31</height>
        </rect>
@@ -1328,15 +1407,12 @@
         <pointsize>11</pointsize>
        </font>
       </property>
-      <property name="suffix">
-       <string> qm</string>
-      </property>
      </widget>
      <widget class="QLabel" name="lbl_ppe">
       <property name="geometry">
        <rect>
-        <x>970</x>
-        <y>260</y>
+        <x>980</x>
+        <y>330</y>
         <width>201</width>
         <height>16</height>
        </rect>
@@ -1353,8 +1429,8 @@
      <widget class="QDoubleSpinBox" name="dsb_ppe">
       <property name="geometry">
        <rect>
-        <x>970</x>
-        <y>280</y>
+        <x>980</x>
+        <y>350</y>
         <width>201</width>
         <height>31</height>
        </rect>
@@ -1366,6 +1442,39 @@
       </property>
       <property name="suffix">
        <string> €</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="tb_pos">
+      <property name="geometry">
+       <rect>
+        <x>750</x>
+        <y>60</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lbl_pos">
+      <property name="geometry">
+       <rect>
+        <x>750</x>
+        <y>40</y>
+        <width>121</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Positionsnummer</string>
       </property>
      </widget>
     </widget>
@@ -1679,4 +1788,7 @@
    </hints>
   </connection>
  </connections>
+ <slots>
+  <slot>on_current_tab_changed(QModelIndex)</slot>
+ </slots>
 </ui>
