--- a/Qt/test.ui
+++ b/Qt/test.ui
@@ -192,7 +192,7 @@
       <item>
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>0</number>
+         <number>3</number>
         </property>
         <widget class="QWidget" name="tab_rechnungen">
          <attribute name="title">
@@ -319,13 +319,13 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="5" column="0">
+                  <item row="6" column="0">
                    <widget class="QTableView" name="tv_rechnungen_form_kunde"/>
                   </item>
-                  <item row="5" column="1">
+                  <item row="6" column="1">
                    <widget class="QTableView" name="tv_rechnungen_form_dienstleister"/>
                   </item>
-                  <item row="6" column="0">
+                  <item row="7" column="0">
                    <widget class="QPushButton" name="btn_kunden_anlegen">
                     <property name="sizePolicy">
                      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -360,7 +360,7 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="6" column="1">
+                  <item row="7" column="1">
                    <widget class="QPushButton" name="btn_dienstleister_anlegen">
                     <property name="sizePolicy">
                      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -383,10 +383,10 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="7" column="0" colspan="2">
+                  <item row="8" column="0" colspan="2">
                    <widget class="QTableView" name="tv_rechnungen_form_positionen"/>
                   </item>
-                  <item row="8" column="0">
+                  <item row="9" column="0">
                    <widget class="QPushButton" name="btn_positionen_anlegen">
                     <property name="sizePolicy">
                      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -425,6 +425,16 @@
                       <normaloff>icons/x.png</normaloff>icons/x.png</iconset>
                     </property>
                    </widget>
+                  </item>
+                  <item row="5" column="0">
+                   <widget class="QLabel" name="lbl_vat_Positionen">
+                    <property name="text">
+                     <string>Mw.St. Positionen</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="5" column="1">
+                   <widget class="QDoubleSpinBox" name="dsb_mwst_positionen"/>
                   </item>
                  </layout>
                 </item>
