FIX UNIQUE StNr, Logo Upload, UI-Anpassungen

--- a/Qt/main.ui
+++ b/Qt/main.ui
@@ -183,7 +183,7 @@
       <item>
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>0</number>
+         <number>3</number>
         </property>
         <widget class="QWidget" name="tab_rechnungen">
          <attribute name="title">
@@ -1289,14 +1289,21 @@
          </attribute>
          <layout class="QHBoxLayout" name="layoutTabPositionenMain">
           <item>
-           <widget class="QTableView" name="tv_positionen">
-            <property name="editTriggers">
-             <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
-            </property>
-            <property name="sortingEnabled">
-             <bool>true</bool>
-            </property>
-           </widget>
+           <layout class="QVBoxLayout" name="verticalLayout_2">
+            <item>
+             <widget class="QTableView" name="tv_positionen">
+              <property name="editTriggers">
+               <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
+              </property>
+              <property name="sortingEnabled">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QTableView" name="tv_detail_positionen"/>
+            </item>
+           </layout>
           </item>
           <item>
            <layout class="QVBoxLayout" name="positionenFormColumn">
