--- a/Qt/main.ui
+++ b/Qt/main.ui
@@ -45,23 +45,6 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="btn_search">
-        <property name="minimumSize">
-         <size>
-          <width>28</width>
-          <height>28</height>
-         </size>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>icons/search.png</normaloff>icons/search.png</iconset>
-        </property>
-       </widget>
-      </item>
-      <item>
        <spacer name="horizontalSpacerSearchRight">
         <property name="orientation">
          <enum>Qt::Orientation::Horizontal</enum>
@@ -145,7 +128,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_felder_leeren">
+         <widget class="QPushButton" name="btn_drucken">
           <property name="minimumSize">
            <size>
             <width>100</width>
@@ -153,11 +136,11 @@
            </size>
           </property>
           <property name="text">
-           <string>Felder leeren</string>
+           <string>Drucken</string>
           </property>
           <property name="icon">
            <iconset>
-            <normaloff>icons/loschen.png</normaloff>icons/loschen.png</iconset>
+            <normaloff>icons/printer.png</normaloff>icons/printer.png</iconset>
           </property>
          </widget>
         </item>
@@ -183,7 +166,7 @@
       <item>
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>3</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab_rechnungen">
          <attribute name="title">
@@ -388,27 +371,8 @@
                   </item>
                   <item row="6" column="0" colspan="2">
                    <layout class="QGridLayout" name="gridLayout_3">
-                    <item row="1" column="0">
-                     <widget class="QTableView" name="tv_rechnungen_form_kunde"/>
-                    </item>
                     <item row="3" column="0" colspan="2">
                      <widget class="QTableView" name="tv_rechnungen_form_positionen"/>
-                    </item>
-                    <item row="0" column="0">
-                     <widget class="QLineEdit" name="tb_search_kunden">
-                      <property name="minimumSize">
-                       <size>
-                        <width>0</width>
-                        <height>24</height>
-                       </size>
-                      </property>
-                      <property name="placeholderText">
-                       <string>Suche nach Kunden</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item row="1" column="1">
-                     <widget class="QTableView" name="tv_rechnungen_form_dienstleister"/>
                     </item>
                     <item row="0" column="1">
                      <widget class="QLineEdit" name="tb_search_dienstleister">
@@ -441,6 +405,25 @@
                        <string>Suche nach Positionen</string>
                       </property>
                      </widget>
+                    </item>
+                    <item row="0" column="0">
+                     <widget class="QLineEdit" name="tb_search_kunden">
+                      <property name="minimumSize">
+                       <size>
+                        <width>0</width>
+                        <height>24</height>
+                       </size>
+                      </property>
+                      <property name="placeholderText">
+                       <string>Suche nach Kunden</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="1" column="1">
+                     <widget class="QTableView" name="tv_rechnungen_form_dienstleister"/>
+                    </item>
+                    <item row="1" column="0">
+                     <widget class="QTableView" name="tv_rechnungen_form_kunde"/>
                     </item>
                    </layout>
                   </item>
@@ -1486,12 +1469,12 @@
    <slot>show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>79</x>
-     <y>226</y>
+     <x>90</x>
+     <y>567</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1020</x>
-     <y>277</y>
+     <x>210</x>
+     <y>91</y>
     </hint>
    </hints>
   </connection>
@@ -1502,12 +1485,12 @@
    <slot>hide()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1131</x>
-     <y>210</y>
+     <x>231</x>
+     <y>106</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1051</x>
-     <y>275</y>
+     <x>210</x>
+     <y>91</y>
     </hint>
    </hints>
   </connection>
