--- a/Qt/main.ui
+++ b/Qt/main.ui
@@ -185,7 +185,7 @@
       <item>
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>3</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab_rechnungen">
          <attribute name="title">
@@ -218,6 +218,9 @@
           </item>
           <item>
            <widget class="QWidget" name="w_rechnung_hinzufuegen" native="true">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
               <horstretch>0</horstretch>
